--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="min-w-screen h-screen bg-neutral-800 text-white flex flex-col justify-center items-center">
-    <h1 class="text-9xl font-black text-blue-600">Better<span class="text-red-600">Reads</span></h1>
-    <p class="text-3xl">coming soon</p>
+<div class="min-w-screen h-screen bg-neutral-800 text-white flex flex-col justify-between items-center p-4">
+    <div></div>
+    <div class="flex flex-col justify-center items-center">
+        <h1 class="text-9xl font-black text-[#2853a5]">Better<span class="text-[#ef4b5a]">Reads</span></h1>
+        <p class="text-3xl">coming soon</p>
+    </div>
+    <div class="text-neutral-500">
+        <p>Muhammad Oka - Ferdinand Raja Kenedy - Andika Pramudya Wardana - Rafif Firmansyah Aulia</p>
+    </div>
 </div>
 {% endblock %}
