--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,7 +4,7 @@
 <div class="min-w-screen h-screen bg-neutral-800 text-white flex flex-col justify-between items-center p-4">
     <div></div>
     <div class="flex flex-col justify-center items-center">
-        <h1 class="text-9xl font-black text-[#2853a5]">Better<span class="text-[#ef4b5a]">Reads</span></h1>
+        <h1 class="text-9xl font-black text-[#2853a5] hover:drop-shadow-[0_20px_20px_rgb(0,0,0,0.5)] hover:scale-105 transition-all">Better<span class="text-[#ef4b5a]">Reads</span></h1>
         <p class="text-3xl">coming soon</p>
     </div>
     <div class="text-neutral-500">
