--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -5,8 +5,8 @@
     <nav class="bg-neutral-600 p-8 rounded-b-xl">
         <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
     </nav>
-    <div class="grid grid-cols-2 justify-center items-center p-16 w-full h-full">
-        <h1 class="text-6xl font-bold text-right p-16">Login</h1>
+    <div class="flex flex-col justify-center items-center p-16 w-full h-full">
+        <h1 class="text-6xl font-bold">Login</h1>
         <div class="w-1/2">
             <form method="POST" class="flex flex-col gap-4">
                 {% csrf_token %}
@@ -18,6 +18,7 @@
                     <label for="password" class="text-2xl font-bold">Password</label>
                     <input type="password" name="password" id="password" class="block w-full p-2 rounded-lg bg-neutral-700 text-white" />
                 </div>
+                <a href="/auth/register" class="text-xl">Don't have an account? Register here!</a>
                 <button type="submit" class="bg-[#356fda] text-white text-2xl font-bold p-2 rounded-lg">Login</button>
                 {% if messages %}
                 {% for message in messages %}
