--- a/authentication/templates/register.html
+++ b/authentication/templates/register.html
@@ -5,8 +5,8 @@
     <nav class="bg-neutral-600 p-8 rounded-b-xl">
         <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
     </nav>
-    <div class="grid grid-cols-2 justify-center items-center p-16 w-full h-full">
-        <h1 class="text-6xl font-bold text-right p-16">Register</h1>
+    <div class="flex flex-col justify-center items-center p-16 w-full h-full">
+        <h1 class="text-6xl font-bold">Register</h1>
         <div class="w-1/2">
             <form method="POST" class="flex flex-col gap-4">
                 {% csrf_token %}
@@ -14,14 +14,36 @@
                     <label for="username" class="text-2xl font-bold">Username</label>
                     <input type="text" name="username" id="username" class="block w-full p-2 rounded-lg bg-neutral-700 text-white" />
                 </div>
+                {% if form.errors.username %}
+                    <div class="text-[#ec2f3f] text-xl font-bold">
+                        {{ form.errors.username }}
+                    </div>
+                {% endif %}
                 <div class="flex flex-col gap-2">
                     <label for="password1" class="text-2xl font-bold">Password</label>
                     <input type="password" name="password1" id="password1" class="block w-full p-2 rounded-lg bg-neutral-700 text-white" />
                 </div>
+                {% if form.errors.password1 %}
+                    <div class="text-[#ec2f3f] text-xl font-bold">
+                        {{ form.errors.password1 }}
+                    </div>
+                {% endif %}
                 <div class="flex flex-col gap-2">
                     <label for="password2" class="text-2xl font-bold">Password Confirm</label>
                     <input type="password" name="password2" id="password2" class="block w-full p-2 rounded-lg bg-neutral-700 text-white" />
                 </div>
+                {% if form.errors.password2 %}
+                    <div class="text-[#ec2f3f] text-xl font-bold">
+                        {{ form.errors.password2 }}
+                    </div>
+                {% endif %}
+                {% if messages %}
+                    {% for message in messages %}
+                    <div class="text-[#ec2f3f] text-xl font-bold">
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                {% endif %}
                 <button type="submit" class="bg-[#356fda] text-white text-2xl font-bold p-2 rounded-lg">Register</button>
             </form>
         </div>
