--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -18,7 +18,7 @@
                     <label for="password" class="text-2xl font-bold">Password</label>
                     <input type="password" name="password" id="password" class="block w-full p-2 rounded-lg bg-neutral-700 text-white" />
                 </div>
-                <a href="/auth/register" class="text-xl">Don't have an account? Register here!</a>
+                <a href="/auth/register" class="text-xl">Don't have an account? <span class="hover:text-[#236bf1]">Register here!</span></a>
                 <button type="submit" class="bg-[#356fda] text-white text-2xl font-bold p-2 rounded-lg">Login</button>
                 {% if messages %}
                 {% for message in messages %}
