--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="flex flex-col w-screen h-screen">
-    <nav class="bg-neutral-600 p-8 rounded-b-xl grid grid-cols-3 justify-between">
+<div class="flex flex-col">
+    <nav class=" bg-neutral-600 px-8 py-6 rounded-b-xl grid grid-cols-3 justify-between items-center">
         <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
         <input class="bg-neutral-500 rounded-xl">
         <div class="flex flex-col justify-center items-end">
-            <p class="text-2xl font-bold">Hello, {{ user.username }}!</p>
+            <p class="text-2xl font-bold">Hello, <a href="/user/profile/">{{ user.username }}</a>!</p>
             <a href="/auth/logout/">Logout</a>
         </div>
     </nav>
@@ -29,6 +29,19 @@
                 </div>
                 <p class="text-xl">Joined on {{ user.date_joined.date }}</p>
             </div>
+        </div>
+        <div class="flex flex-col justify-center items-center gap-4">
+            <h1 class="text-2xl">Favorite Books</h1>
+            {% for rating in top5ratings %}
+            <div class="{% if forloop.counter == 1 %} bg-amber-500 {% elif forloop.counter == 2 %} bg-gray-400 {% elif forloop.counter == 3 %} bg-amber-900 {% else %} bg-neutral-600 {% endif %} flex justify-between items-center px-16 py-8 rounded-xl w-full">
+                <h2 class="text-3xl font-bold justify-self-start">#{{ forloop.counter }}</h2>
+                <div class="col-span-3">
+                    <p class="text-xl font-bold">{{rating.json_data.title}}</p>
+                    <p>by {{rating.json_data.authors.0}}</p>
+                </div>
+                <p class="text-3xl font-bold">{{rating.rating}}</p>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
