--- a/book/templates/buy_product.html
+++ b/book/templates/buy_product.html
@@ -5,5 +5,13 @@
     <nav class="bg-neutral-600 p-8 rounded-b-xl">
         <a href="/" class="text-4xl font-black text-[#236bf1]">Better<span class="text-[#ec2f3f]">Reads</span></a>
     </nav>
+    <div class="flex items-center justify-center w-full h-full">
+        <div class="flex flex-col justify-center items-center bg-neutral-100 p-8 rounded-xl shadow-lg">
+            <h1 class="text-4xl font-black text-[#236bf1]">Checkout Succesful!</h1>
+            <a href="/">
+            <button class="bg-[#236bf1] text-white font-semibold py-2 px-4 rounded-full mt-4 hover:bg-[#1655b0]" style="align-content: center;">Go back to Main Page</button>
+        </a>
+        </div>
+    </div>
 </div>
 {% endblock %}
