--- a/main/templates/navbar.html
+++ b/main/templates/navbar.html
@@ -1,13 +1,50 @@
-<nav class="bg-neutral-600 px-8 py-6 rounded-b-xl grid grid-cols-3 items-center">
-    <a href="/" class="text-4xl font-black text-[#236bf1] hover:drop-shadow-[0_20px_20px_rgb(0,0,0,0.5)] hover:scale-105 transition-all">Better<span class="text-[#ec2f3f]">Reads</span></a>
-    <div class="flex items-center justify-center">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="#ec2f3f" class="bi bi-cart" viewBox="0 0 20 20">
-            <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l1.313 7h8.17l1.313-7H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+<nav class="flex justify-between bg-neutral-600 text-white w-screen">
+    <div class="px-5 xl:px-12 py-6 flex w-full items-center">
+        <a href="/" class="text-3xl font-black text-[#236bf1] hover:drop-shadow-[0_20px_20px_rgb(0,0,0,0.5)] hover:scale-105 transition-all">Better<span class="text-[#ec2f3f]">Reads</span></a>
+        
+    <!-- Nav Links -->
+        <ul class="hidden md:flex mx-auto font-semibold font-heading"></ul>
+    <!-- Header Icons -->
+        <div class="hidden xl:flex items-center space-x-5 items-center">
+            <a class="hover:text-gray-200" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+                    </svg>
+                </a>
+            <a class="flex items-center hover:text-gray-200" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                </svg>
+                <span class="flex absolute -mt-5 ml-4">
+                    <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-pink-400 opacity-75"></span>
+                    <span class="relative inline-flex rounded-full h-3 w-3 bg-pink-500">
+                        </span>
+                    </span>
+                </a>
+        <!-- Sign In / Register      -->
+            <a class="flex items-center hover:text-gray-200" href="/user/profile/">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                </a>
+
+        </div>
+     </div>
+    <!-- Responsive navbar -->
+    <a class="xl:hidden flex mr-6 items-center" href="/buy/">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 hover:text-gray-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
         </svg>
-        <a href="/" class="text-2xl text-[#ec2f3f] items-end hover:drop-shadow-[0_20px_20px_rgb(0,0,0,0.5)] hover:scale-105 transition-all">Cart</a>
-    </div>
-    <div class="flex flex-col justify-center items-end">
-        <p class="text-2xl font-bold">Hello, <a href="/user/profile/">{{ user.username }}</a>!</p>
-        <a href="/auth/logout/">Logout</a>
-    </div>
+        <span class="flex absolute -mt-5 ml-4">
+            <span class="animate-ping absolute inline-flex h-3 w-3 rounded-full bg-pink-400 opacity-75"></span>
+            <span class="relative inline-flex rounded-full h-3 w-3 bg-pink-500">
+             </span>
+         </span>
+    </a>
+    <div class="flex flex-col justify-center items-center pl-10 pr-5">
+        <a href="/auth/logout">Logout</a>
+     </div>
+    <div class="flex flex-col justify-center items-end pr-12">
+        <a href="/user/profile/" class="text-1xl font-bold">{{ user.username }}</a>
+     </div>
 </nav>
